# git-wasp-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  DONE.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.ladle/: components.tsx  config.mjs  vite.config.ts
.superpowers/sdd/: final-review-fix-report.md  task-2-report.md  task-8-report.md
scripts/: make-bench-repo.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  path_guard.rs
src-tauri/src/avatar/: mod.rs
src-tauri/src/branch_ops/: mod.rs
src-tauri/src/commands/: branch.rs  commit.rs  diagnostics.rs  diff.rs  discard.rs  github.rs  graph.rs  hooks.rs  merge.rs  mod.rs  remote.rs  repo.rs  staging.rs  stash.rs  status.rs  theme.rs  workspace.rs  worktree.rs
src-tauri/src/credential_store/: mod.rs
src-tauri/src/diff_engine/: mod.rs
src-tauri/src/file_watcher/: mod.rs
src-tauri/src/github_client/: mod.rs
src-tauri/src/graph/: layout.rs  mod.rs
src-tauri/src/hook_runner/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/merge_ops/: mod.rs
src-tauri/src/operation_runner/: mod.rs
src-tauri/src/remote_ops/: mod.rs
src-tauri/src/repo_manager/: config.rs  mod.rs
src-tauri/src/stash/: mod.rs
src-tauri/src/themes/: mod.rs
src-tauri/src/working_tree/: mod.rs
src-tauri/src/workspace_ops/: mod.rs
src-tauri/src/worktree_ops/: mod.rs
src/hooks/: useCommitGraph.ts  (+1 more)
(+270 files in other folders)
