[package]
name = "gitclient"
version = "0.1.0"
description = "A personal Git desktop client"
authors = []
edition = "2021"

[lib]
name = "gitclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
dirs = "5"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
octocrab = "0.44"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[features]
ci = []

[dev-dependencies]
tempfile = "3"
httpmock = "0.8"
